--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -435,7 +435,7 @@
     {
       "data": {
         "stringId": 454,
-        "text": "%num% MIS Available"
+        "text": "%num% WONE Available"
       }
     },
     {
