--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -75,7 +75,7 @@
     {
       "data": {
         "stringId": 304,
-        "text": "Total ART burned since launch"
+        "text": "Total MIS burned since launch"
       }
     },
     {
@@ -123,13 +123,13 @@
     {
       "data": {
         "stringId": 320,
-        "text": "Stake LP tokens to earn ART"
+        "text": "Stake LP tokens to earn MIS"
       }
     },
     {
       "data": {
         "stringId": 322,
-        "text": "Stake ART, get SYRUP."
+        "text": "Stake MIS, get SYRUP."
       }
     },
     {
@@ -153,7 +153,7 @@
     {
       "data": {
         "stringId": 334,
-        "text": "Every time you stake and unstake ART tokens, the contract will automatically harvest ART rewards for you!"
+        "text": "Every time you stake and unstake MIS tokens, the contract will automatically harvest MIS rewards for you!"
       }
     },
     {
@@ -219,7 +219,7 @@
     {
       "data": {
         "stringId": 358,
-        "text": "ART price"
+        "text": "MIS price"
       }
     },
     {
@@ -243,7 +243,7 @@
     {
       "data": {
         "stringId": 380,
-        "text": "1 ART = 1 SYRUP"
+        "text": "1 MIS = 1 SYRUP"
       }
     },
     {
@@ -291,7 +291,7 @@
     {
       "data": {
         "stringId": 400,
-        "text": "SYRUP holders proportionally split 25% of ART block emissions each day (10 ART per block), Rewards are distributed each block."
+        "text": "SYRUP holders proportionally split 25% of MIS block emissions each day (10 MIS per block), Rewards are distributed each block."
       }
     },
     {
@@ -351,13 +351,13 @@
     {
       "data": {
         "stringId": 424,
-        "text": "%num% ART"
+        "text": "%num% MIS"
       }
     },
     {
       "data": {
         "stringId": 426,
-        "text": "Spend ART to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
+        "text": "Spend MIS to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
       }
     },
     {
@@ -435,7 +435,7 @@
     {
       "data": {
         "stringId": 454,
-        "text": "%num% WONE Available"
+        "text": "%num% %asset% Available"
       }
     },
     {
@@ -495,7 +495,7 @@
     {
       "data": {
         "stringId": 478,
-        "text": "Ticket purchases are final. Your ART cannot be returned to you after buying tickets."
+        "text": "Ticket purchases are final. Your MIS cannot be returned to you after buying tickets."
       }
     },
     {
@@ -507,7 +507,7 @@
     {
       "data": {
         "stringId": 482,
-        "text": "ART prizes to be claimed"
+        "text": "MIS prizes to be claimed"
       }
     },
     {
@@ -543,13 +543,13 @@
     {
       "data": {
         "stringId": 494,
-        "text": "Approve ART"
+        "text": "Approve MIS"
       }
     },
     {
       "data": {
         "stringId": 496,
-        "text": "SYRUP holders proportionally split 40% of ART block emissions each day (10 ART per block), Rewards are distributed each block."
+        "text": "SYRUP holders proportionally split 40% of MIS block emissions each day (10 MIS per block), Rewards are distributed each block."
       }
     },
     {
@@ -567,19 +567,19 @@
     {
       "data": {
         "stringId": 504,
-        "text": "You\u2019ll pay for the new tokens using ART-BNB LP tokens, which means you need to stake equal amounts of ART and BNB in a liquidity pool to take part."
+        "text": "You\u2019ll pay for the new tokens using MIS-BNB LP tokens, which means you need to stake equal amounts of MIS and BNB in a liquidity pool to take part."
       }
     },
     {
       "data": {
         "stringId": 506,
-        "text": "Get ART-BNB LP >"
+        "text": "Get MIS-BNB LP >"
       }
     },
     {
       "data": {
         "stringId": 508,
-        "text": "The project gets the BNB, The Lab burns the ART."
+        "text": "The project gets the BNB, The Lab burns the MIS."
       }
     },
     {
@@ -645,25 +645,25 @@
     {
       "data": {
         "stringId": 534,
-        "text": "ART Stats"
+        "text": "MIS Stats"
       }
     },
     {
       "data": {
         "stringId": 536,
-        "text": "Total ART Supply"
+        "text": "Total MIS Supply"
       }
     },
     {
       "data": {
         "stringId": 538,
-        "text": "Total ART Burned"
+        "text": "Total MIS Burned"
       }
     },
     {
       "data": {
         "stringId": 540,
-        "text": "New ART\/block"
+        "text": "New MIS\/block"
       }
     },
     {
@@ -675,19 +675,19 @@
     {
       "data": {
         "stringId": 544,
-        "text": "ART to Harvest"
+        "text": "MIS to Harvest"
       }
     },
     {
       "data": {
         "stringId": 546,
-        "text": "ART in Wallet"
+        "text": "MIS in Wallet"
       }
     },
     {
       "data": {
         "stringId": 548,
-        "text": "Collecting ART"
+        "text": "Collecting MIS"
       }
     },
     {
@@ -699,7 +699,7 @@
     {
       "data": {
         "stringId": 552,
-        "text": "ART to Collect"
+        "text": "MIS to Collect"
       }
     },
     {
@@ -765,7 +765,7 @@
     {
       "data": {
         "stringId": 580,
-        "text": "Stake ART to earn new tokens."
+        "text": "Stake MIS to earn new tokens."
       }
     },
     {
@@ -783,7 +783,7 @@
     {
       "data": {
         "stringId": 586,
-        "text": "ART to burn (USD)"
+        "text": "MIS to burn (USD)"
       }
     },
     {
@@ -795,7 +795,7 @@
     {
       "data": {
         "stringId": 590,
-        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest ART rewards for you!"
+        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest MIS rewards for you!"
       }
     },
     {
@@ -813,13 +813,13 @@
     {
       "data": {
         "stringId": 596,
-        "text": "Buy ART and BNB tokens"
+        "text": "Buy MIS and BNB tokens"
       }
     },
     {
       "data": {
         "stringId": 598,
-        "text": "Get ART-BNB LP tokens by adding ART and BNB liquidity"
+        "text": "Get MIS-BNB LP tokens by adding MIS and BNB liquidity"
       }
     },
     {
@@ -831,7 +831,7 @@
     {
       "data": {
         "stringId": 602,
-        "text": "While the sale is live, commit your ART-LP tokens to buy the IFO tokens"
+        "text": "While the sale is live, commit your MIS-LP tokens to buy the IFO tokens"
       }
     },
     {
@@ -867,7 +867,7 @@
     {
       "data": {
         "stringId": 614,
-        "text": "Trade in for ART, or keep for your collection!"
+        "text": "Trade in for MIS, or keep for your collection!"
       }
     },
     {
@@ -909,7 +909,7 @@
     {
       "data": {
         "stringId": 628,
-        "text": "When you trade in this NFT to receive ART, you will lose access to it forever!"
+        "text": "When you trade in this NFT to receive MIS, you will lose access to it forever!"
       }
     },
     {
@@ -939,7 +939,7 @@
     {
       "data": {
         "stringId": 638,
-        "text": "Winners can trade in their NFTs for a ART value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
+        "text": "Winners can trade in their NFTs for a MIS value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
       }
     },
     {
@@ -981,7 +981,7 @@
     {
       "data": {
         "stringId": 654,
-        "text": "Trade in for ART"
+        "text": "Trade in for MIS"
       }
     },
     {
@@ -1107,7 +1107,7 @@
     {
       "data": {
         "stringId": 696,
-        "text": "Stake LP tokens to earn ART"
+        "text": "Stake LP tokens to earn MIS"
       }
     },
     {
@@ -1149,13 +1149,13 @@
     {
       "data": {
         "stringId": 708,
-        "text": "The ART Lottery"
+        "text": "The MIS Lottery"
       }
     },
     {
       "data": {
         "stringId": 710,
-        "text": "Buy tickets with ART"
+        "text": "Buy tickets with MIS"
       }
     },
     {
@@ -1209,7 +1209,7 @@
     {
       "data": {
         "stringId": 10000,
-        "text": "Deposit Fee will be used to buyback ART"
+        "text": "Deposit Fee will be used to buyback MIS"
       }
     },
     {
@@ -1221,7 +1221,7 @@
     {
       "data": {
         "stringId": 10002,
-        "text": "Stake tokens to earn ART"
+        "text": "Stake tokens to earn MIS"
       }
     },
     {
